--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,13 +8,13 @@ main:
     url: /
     weight: 10
   - name: Publications
-    url: /#papers
+    url: publication/
     weight: 11
   #  - name: Talks
   #  url: /#talks
   #  weight: 12
   - name: News
-    url: /#news
+    url: post/
     weight: 13
   - name: Experience
     url: experience/
